--- a/style.css
+++ b/style.css
@@ -1,17 +1,70 @@
 table {
-    border: 3px solid black;
     padding: 0;
     margin: 0;
 }
 
 th {
     border: 1px solid black;
+    border-radius: 3px;
     padding: 10px;
     text-align: center;
+    background-color: antiquewhite;
+    min-width: 150px;
 }
 
 td {
     border: 1px solid black;
+    border-radius: 3px;
     padding: 10px;
     text-align: center;
+}
+
+tr:nth-child(odd) {
+    background-color: rgb(238, 238, 238);
+}
+
+td:nth-child(5),
+td:nth-child(6),
+th:nth-child(5),
+th:nth-child(6) {
+    background-color: white;
+    border: none;
+    padding: 5px;
+    min-width: 10px;
+}
+
+button {
+    margin: 0;
+}
+
+#form_cont, form {
+    width: 250px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 3px;
+}
+
+#form_cont {
+    margin-top: 20px;
+    margin-left: 208px;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding-right: 90px;
+    padding-bottom: 30px;
+}
+
+#submission_title {
+    margin-right: 15px;
+    margin-bottom: 5px;
+    /* border: 1px solid black; */
+    border-radius: 5px;
+    padding: 0px 5px;
+}
+
+#submit_btn {
+    margin-top: 10px;
+    width: 152px;
+    background-color: antiquewhite;
+    border-radius: 5px;
 }
